add sort and other functionality to call list part

--- a/app_angular/css/index.css
+++ b/app_angular/css/index.css
@@ -16,3 +16,10 @@ form input.ng-valid.ng-touched {
 form .error-message {
     color: #FA787E
 }
+
+.sortorder:after {
+  content: '\25b2';
+}
+.sortorder.reverse:after {
+  content: '\25bc';
+}
